Se creo un archivo de sripts que contiene una funcion cancelar

--- a/templates/pacient_form_base.html
+++ b/templates/pacient_form_base.html
@@ -202,6 +202,7 @@
             <div class="form-group">
               <div class="col-md-12 text-center">
                 <button type="submit" id='btnSubmit'>Confirmar</button>
+                <button type="submit" onclick="return cancelar('pacients_index')"; id='btnSubmit'>Cancelar</button>
               </div>
             </div>
           </div>
@@ -215,5 +216,6 @@
 <br>
 <br>
 <br>
+
 
 {% endblock %}
