--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -3,13 +3,16 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    
 
     <!--BOOTSTRAP -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/js/scripts.js"></script>
     <!-- -->
+
 
     {% block head%}
     {% endblock %}
@@ -77,13 +80,7 @@
 </body>
 </html>
 
-<script type="text/javascript">
-function cancelar() {
-    if(confirm("¿Seguro que deseas cancelar?")) {
-        document.location.href = 'index.php';
-    }
-}
-</script>
+
 
 
 <style>
