--- a/templates/user_form_base.html
+++ b/templates/user_form_base.html
@@ -64,6 +64,7 @@
               <div class="form-group">
                 <div class="col-md-12 text-center">
                   <button type="submit" id='btnSubmit'>Confirmar</button>
+                  <input type="button" onclick="return cancelar('users_index')"; value="Cancelar" id='btnSubmit'></button>
                 </div>
               </div>
             </div>
@@ -78,5 +79,7 @@
 <br>
 <br>
 <br>
+
+
 
 {% endblock %}
