Se cambiaron los botones de pacients_index

--- a/templates/pacient_demographic_data.html
+++ b/templates/pacient_demographic_data.html
@@ -41,17 +41,11 @@
     <td>{{ pacient.home_type }}</td>
     <td>{{ pacient.water_type }}</td>
     <td>
-      <form action="./?action=demographicdata_form_update" method="post">
-        <input type="submit" class="btn btn-success" name="id" value="Modificar">
+      <form action="./?action=pacient_form_update method="post">
+        <input type="submit" class="btn btn-primary" name="id" value="Modificar">
         <input type="hidden" name="id" id="id" value= "{{ pacient.id }}">
       </form>
     </td>
-    <td>
-      <form action="./?action=demographicdata_destroyed" method="post">
-          <input type="submit" onclick='return confirm("¿Estás seguro?")' class="btn btn-success" value="Eliminar" id="boton_borrar"/>
-          <input type="hidden" name="id" id="id" value= "{{ pacient.id }}">
-        </form>
-      </td>
     </tr>
 
 </table>
