--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -8,15 +8,15 @@
   <table class="table table-condensed">
  <thead>
     <tr>
-    
+      <br>
          &nbsp; <form action="#" id="searchform">
            <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
            &nbsp; 
-           <button type= "submit" id='btnSubmit'> Buscar </button>
+           <button type= "submit" class="btn btn-info"> Buscar <span class="glyphicon glyphicon-search"></span> </button>
          </form>
         &nbsp; 
           <form action="./?action=pacient_new" method="post">
-            <button type= "submit" id='btnSubmit'> Agregar paciente  <span class="glyphicon glyphicon-pencil"></span></button>
+            <button type= "submit" class="btn btn-success"> Agregar paciente  <span class="glyphicon glyphicon-plus"></span></button>
           </form>
       
     </tr>
