--- a/templates/pacient_form_base.html
+++ b/templates/pacient_form_base.html
@@ -7,12 +7,12 @@
 <form action="{% block action %} {% endblock %}" method='post'>
   <div class="container">
     <div class="row">
-      <div align="center">
+      <div align="left">
         <div class="well well-sm">
           <div class="form-horizontal">
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   Nombre:
                   <input id="first_name" name="first_name" type="text" placeholder="Nombre"
@@ -23,7 +23,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   Apellido:
                     <input id="last_name" name="last_name" type="text" placeholder="Apellido"
@@ -34,7 +34,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Fecha de Nacimiento:
                     <input id="fecha_de_nacimiento" name="birth_date" type="date"
@@ -45,7 +45,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   Sexo:
                     <select name="gender" required>
@@ -58,7 +58,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tipo de Documento:
                     <select name="doc_type" required >
@@ -72,7 +72,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   N&uacute;mero de Documento:
                     <input id="documento" name="dni" type="numeric" placeholder="Nro de Documento"
@@ -83,7 +83,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Domicilio:
                     <input id="domicilio" name="address" type="text" placeholder="Direcci&oacute;n de Domicilio"
@@ -94,7 +94,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tel&eacute;fono/Celular:
                     <input id="telefono" name="phone" type="text" placeholder="Telefono/Celular"
@@ -105,7 +105,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Obra Social:
                     <select name="id_medical_insurance">
@@ -119,7 +119,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tiene Heladera?:
                   <select name="has_refrigerator" required>
@@ -132,7 +132,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tiene Electricidad?:
                     <select name="has_electricity" required>
@@ -145,7 +145,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tiene Mascota(s)?:
                     <select name="has_pet" required>
@@ -158,7 +158,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tipo de Vivienda:
                     <select name="home_type" required>
@@ -172,7 +172,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tipo de Calefacci&oacute;n:
                     <select name="heating_type" required>
@@ -186,7 +186,7 @@
             <br>
             <fieldset>
               <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Tipo de Agua:
                     <select name="water_type" required>
@@ -200,8 +200,9 @@
             {% block form %} {% endblock %}
             <div class="form-group">
               <div class="col-md-12 text-center">
-                <button type="submit" id='btnSubmit'>Confirmar</button>
-                <input type="button" onclick="return cancelar('pacients_index')"; value="Cancelar" id='btnSubmit'></button>
+                <input type="submit" class="btn btn-primary" id= "confirm_button" name="confirm_button" value="Confirmar">
+               
+                <input type="button" class="btn btn-danger" id= "cancel_button" name="cancel_button" onclick="return cancelar('pacients_index')"; value="Cancelar"></button>
               </div>
             </div>
           </div>
