--- a/templates/user_form_base.html
+++ b/templates/user_form_base.html
@@ -7,13 +7,14 @@
   <form action="{% block action %} {% endblock %}" method='post'>
     <div class="container">
       <div class="row">
-        <div align="center">
+        <div align="left">
           <div class="well well-sm">
             <div class="form-horizontal">
               <fieldset>
                 <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                  <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                   <div class="col-md-8">
+                    Nombre:
                     <input id="first_name" name="first_name" type="text" placeholder="Nombre"
                     value="{% block first_name_value %} {% endblock %}" class="form-control" required >
                   </div>
@@ -22,8 +23,9 @@
               <br>
               <fieldset>
                 <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                  <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                   <div class="col-md-8">
+                    Apellido:
                     <input id="last_name" name="last_name" type="text" placeholder="Apellido"
                     value="{% block last_name_value %} {% endblock %}" class="form-control" required>
                   </div>
@@ -32,8 +34,9 @@
               <br>
               <fieldset>
                 <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                  <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                   <div class="col-md-8">
+                    E-mail:
                     <input id="email" name="email" type="email" placeholder="Email"
                     value="{% block email_value %} {% endblock %}" class="form-control" required>
                   </div>
@@ -42,8 +45,9 @@
               <br>
               <fieldset>
                 <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                  <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                   <div class="col-md-8">
+                    Usuario:
                     <input id="username" name="username" type="text" placeholder="Usuario"
                     value="{% block username_value %} {% endblock %}" class="form-control" required>
                   </div>
@@ -52,8 +56,9 @@
               <br>
               <fieldset>
                 <div class="form-group">
-                  <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
+                  <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                   <div class="col-md-8">
+                    Contrase&ntilde;a
                     <input id="password" name="password" type="password" placeholder="Contrasena"
                     value="{% block password_value %} {% endblock %}" class="form-control" required>
                   </div>
@@ -63,8 +68,9 @@
               {% block form %} {% endblock %}
               <div class="form-group">
                 <div class="col-md-12 text-center">
-                  <button type="submit" id='btnSubmit'>Confirmar</button>
-                  <input type="button" onclick="return cancelar('users_index')"; value="Cancelar" id='btnSubmit'></button>
+                <input type="submit" class="btn btn-primary" id= "confirm_button" name="confirm_button" value="Confirmar">
+               
+                <input type="button" class="btn btn-danger" id= "cancel_button" name="cancel_button" onclick="return cancelar('users_index')"; value="Cancelar"></button>
                 </div>
               </div>
             </div>
