Se arreglo la busqueda de usuarios. Y se empezo a implementar la de pacientes

--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -1,6 +1,7 @@
 {% extends 'list_base.html' %}
 
 {% block header %} Listado de Pacientes {% endblock %}
+{% block search_action %} ./?action=pacients_index {% endblock %}
 {% block new_action %} ./?action=pacient_new {% endblock %}
 {% block new_action_label %} Agregar paciente {% endblock %}
 
