--- a/templates/users_index.html
+++ b/templates/users_index.html
@@ -1,6 +1,7 @@
 {% extends 'list_base.html' %}
 
 {% block header %} Listado de Usuarios {% endblock %}
+{% block search_action %} ./?action=users_index {% endblock %}
 {% block new_action %} ./?action=user_new {% endblock %}
 {% block new_action_label %} Agregar usuario {% endblock %}
 
