--- a/templates/list_base.html
+++ b/templates/list_base.html
@@ -4,18 +4,18 @@
 
 <h1 align="center">{% block header %} {% endblock %}</h1>
 <div class="container">
-  <div class="table-responsive">          
+  <div class="table-responsive">
     <table class="table table-condensed">
       <thead>
         <tr>
         <br>
-          &nbsp; 
+          &nbsp;
           <form action="#" id="searchform">
             <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
           &nbsp;
             <button type= "submit" class="btn btn-info"> Buscar <span class="glyphicon glyphicon-search"></span> </button>
           </form>
-          &nbsp; 
+          &nbsp;
           <form action="{% block new_action %} {% endblock %}" method="post">
             <button type= "submit" class="btn btn-success"> {% block new_action_label %} {% endblock %} <span class="glyphicon glyphicon-plus"></span></button>
           </form>
@@ -24,5 +24,30 @@
 {% block inner_body %}
 {% endblock %}
 
+<div class="container">
+  {% if pageCount > 0 %}
+  <form action= ./?action=pacients_index align="right" method="post">
+    <ul class="pagination">
+    {% for i in 1..pageCount %}
+      <li>
+        <input type="submit" class="btn .btn-link" id="page" name="page"  value={{ i }}> &nbsp;
+      </li>
+    {% endfor %}
+    </ul>
+  </form>
+  {% endif %}
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<style>
+  div.table-responsive {
+    background: white;
+  }
+  </style>
 
 {% endblock %}
