--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -57,6 +57,7 @@
             <li><a href="./?action=users_index">Usuarios</a> </li>
             <li><a href="#Roles">Roles</a> </li>
             <li><a href="#Permisos">Permisos</a> </li>
+            <li><a href="./?action=admin">Configuraci&oacute;n</a> </li>
           </ul>
         </li>
       {% endif %}
