paginado de usuarios

--- a/templates/pacients_index.html
+++ b/templates/pacients_index.html
@@ -4,6 +4,7 @@
 {% block search_action %} ./?action=pacients_index {% endblock %}
 {% block new_action %} ./?action=pacient_new {% endblock %}
 {% block new_action_label %} Agregar paciente {% endblock %}
+{% block pagination_action %} ./?action=pacients_index {% endblock %}
 
 {% block inner_body %}
 
