--- a/templates/users_index.html
+++ b/templates/users_index.html
@@ -4,6 +4,7 @@
 {% block search_action %} ./?action=users_index {% endblock %}
 {% block new_action %} ./?action=user_new {% endblock %}
 {% block new_action_label %} Agregar usuario {% endblock %}
+{% block pagination_action %} ./?action=users_index {% endblock %}
 
 {% block inner_body %}
 
