--- a/templates/list_base.html
+++ b/templates/list_base.html
@@ -26,7 +26,7 @@
 
 <div class="container">
   {% if pageCount > 1 %}
-  <form action= ./?action=pacients_index align="right" method="post">
+  <form action="{% block pagination_action %} {% endblock %} "align="right" method="post">
     <ul class="pagination">
     {% for i in 1..pageCount %}
       <li>
