--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -24,7 +24,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   Descripci&oacute;n:
-                    <input id="description" name="description" type="text" value="{{ app.description }}" class="form-control" required>
+                    <textarea id="description"  name="description" type="text" value="{{ app.description }}" class="form-control" required > </textarea>
                 </div>
               </div>
             </fieldset>
@@ -34,7 +34,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   E-mail de contacto:
-                    <input id="contact_mail" name="contact_mail" type="text" value="{{ app.contact_mail }}" class="form-control" required>
+                    <input id="contact_mail" name="contact_mail" type="email" value="{{ app.contact_mail }}" class="form-control" required>
                 </div>
               </div>
             </fieldset>
@@ -54,7 +54,10 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   Sitio Disponible:
-                    <input id="avaiable" name="avaiable" type="text" value="{{ app.avaiable }}" class="form-control" required>
+                    <select id="avaiable" name="avaiable">
+                      <option> Si </option>
+                      <option> No </option>
+                    </select>
                 </div>
               </div>
             </fieldset>
